--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -20,7 +20,16 @@
 
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin=anonymous>
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin=anonymous>
+<!-- 其他样式表引用 -->
 
+   <style>
+  /* 添加此样式以调整顶部导航栏和标题之间的间距 */
+      .wrapper header {
+      margin-top: 20px; /* 您可以根据需要调整此值 */
+     }
+   </style>
+
+<!-- 其他外部资源引用 -->
     {% if site.font == "Sans Serif" %}
     <link rel="stylesheet" href="./assets/css/font_sans_serif.css">
     {% else %}
