--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -21,9 +21,16 @@
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin=anonymous>
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin=anonymous>
 
-       body {
+   <style>
+      /* 添加用于调整topnav和content之间间距的自定义样式 */
+      body {
         margin-top: 10px; /* 根据需要调整值 */
       }
+
+      .wrapper {
+        padding-top: 10px; /* 根据需要调整值 */
+      }
+    </style>
     
     {% if site.font == "Sans Serif" %}
     <link rel="stylesheet" href="./assets/css/font_sans_serif.css">
