--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -22,13 +22,8 @@
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin=anonymous>
 
    <style>
-      /* 添加用于调整topnav和content之间间距的自定义样式 */
-      body {
-        margin-top: 0px; /* 根据需要调整值 */
-      }
-
-      .wrapper {
-        padding-top: 10px; /* 根据需要调整值 */
+      .topnav {
+        margin-bottom: 50px; /* 根据需要调整值 */
       }
     </style>
     
