--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -21,11 +21,16 @@
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin=anonymous>
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin=anonymous>
 
-   <style>
-      .topnav {
-        margin-bottom: 50px; /* 根据需要调整值 */
-      }
-    </style>
+<style>
+    .topnav {
+        margin-bottom: 20px; /* 根据需要调整 margin-bottom 的值 */
+    }
+
+    section {
+        margin-top: 20px; /* 根据需要调整 margin-top 的值 */
+    }
+</style>
+
     
     {% if site.font == "Sans Serif" %}
     <link rel="stylesheet" href="./assets/css/font_sans_serif.css">
